--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@
 
 .container {
   margin: 0 auto;
-  max-width: 1000px;
+  max-width: 1200px;
   padding: 40px;
 }
 
@@ -29,9 +29,9 @@
 .chip {
   display: inline-block;
   padding: 0 25px;
-  height: 39px;
+  height: 30px;
   font-size: 16px;
-  line-height: 39px;
+  line-height: 30px;
   border-radius: 25px;
   background-color: #f1f1f1;
   margin-top: 1rem;
@@ -42,8 +42,8 @@
 .chip img {
   float: left;
   margin: 0 10px 0 -25px;
-  height: 39px;
-  width: 39px;
+  height: 30px;
+  width: 30px;
   border-radius: 50%;
 }
 
@@ -120,6 +120,12 @@
   display: flex;
 }
 
+.mob-image {
+  width: 36px;
+  height: 36px;
+  margin-top: 0.1rem;
+}
+
 @media (min-width: 768px) {
   .form {
     grid-template-columns: auto 1fr auto;
@@ -135,5 +141,31 @@
 @media only screen and (max-width: 600px) {
   .card-list {
     column-count: 1;
+  }
+
+  .chip {
+    display: inline-block;
+    padding: 0 25px;
+    height: 20px;
+    font-size: 16px;
+    line-height: 20px;
+    border-radius: 25px;
+    background-color: #f1f1f1;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    margin-left: 0.5rem;
+  }
+
+  .chip img {
+    float: left;
+    margin: 0 10px 0 -25px;
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+  }
+
+  .mob-image {
+    width: 16px;
+    height: 16px;
   }
 }
